Revert " Fix for Supporter Plus checkout country dropdown layout bug"

--- a/support-frontend/assets/components/dialog/dialog.scss
+++ b/support-frontend/assets/components/dialog/dialog.scss
@@ -14,7 +14,7 @@
 
 .component-dialog--open {
 	visibility: visible;
-	position: absolute;
+	position: fixed;
 	height: 100%;
 	width: 100%;
 	top: 0;
