--- a/support-frontend/assets/components/menu/menu.module.scss
+++ b/support-frontend/assets/components/menu/menu.module.scss
@@ -8,9 +8,10 @@
 
 	@include mq($until: tablet) {
 		position: fixed !important;
-		top: 3rem !important;
+		top: auto !important;
 		left: 0 !important;
 		right: 0 !important;
+		bottom: 0 !important;
 		max-height: 70vh;
 		border-bottom-left-radius: 0;
 		border-bottom-right-radius: 0;
